# rudolf

./: .gitignore  CMakeLists.txt  README.md
include/: rudolf.h
src/: rudolf.c  rudolf.h  tool.c
